productos y servicios listo

--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -68,7 +68,7 @@
                             <p class="control has-icons-left">
                                 <input class="input" type="text" placeholder="Ingresa un link para redireccionar para mas info" name="link" #link="ngModel" [(ngModel)]="novedadService.selectedNovedad.link">
                               <span class="icon is-small is-left">
-                                <i class="fas fa-lock"></i>
+                                <i class="fas fa-link"></i>
                               </span>
                             </p>
                           </div>
@@ -144,7 +144,7 @@
                             <p class="control has-icons-left">
                                 <input class="input" type="text" placeholder="Ingresa un link para redireccionar para mas info" name="link" #link="ngModel" [(ngModel)]="novedadService.selectedNovedad.link">
                               <span class="icon is-small is-left">
-                                <i class="fas fa-lock"></i>
+                                <i class="fas fa-link"></i>
                               </span>
                             </p>
                           </div>
