ya se cierra el modal

--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -118,7 +118,7 @@
             <div class="modal-card">
                 <header class="modal-card-head">
                     <p class="modal-card-title">Editar novedades</p>
-                    <button class="delete" aria-label="close" (click)="updNovedadForm(novedadUdpForm)"></button>
+                    <button class="delete" aria-label="close" (click)="cerrarModalUpd()"></button>
                 </header>
                 <section class="modal-card-body">
 
