exportacion de excel y estilos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
 
         <!-- Developers -->
         <div class="row columns">
-            <div class="column is-one-third">
+            <div class="column is-one-quarter">
                 <div class="card large">
                     <div class="card-image">
                         <figure class="image">
@@ -26,12 +26,12 @@
                         <div class="content">
                             Administra todos los usuarios de la aplicación movil y crea nuevos brigadistas o administradores.
                             <hr>
-                            <button class="button is-danger is-outlined" [routerLink]="['/usuarios']">Outlined</button>
+                            <button class="button is-danger is-outlined" [routerLink]="['/usuarios']">Ingresar  </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column is-one-third">
+            <div class="column is-one-quarter">
                 <div class="card large">
                     <div class="card-image">
                         <figure class="image">
@@ -47,12 +47,12 @@
                         <div class="content">
                             Crea, modifica o elimina los productos y servicios los cuales se muestran el la applicación movil.
                             <hr>
-                            <button class="button is-warning is-outlined" [routerLink]="['/productos']">Outlined</button>
+                            <button class="button is-warning is-outlined" [routerLink]="['/productos']">Ingresar</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column is-one-third">
+            <div class="column is-one-quarter">
                 <div class="card large">
                     <div class="card-image">
                         <figure class="image">
@@ -68,7 +68,28 @@
                         <div class="content">
                             Manten al dia a todos los usuarios de la applicacion movil actualizandola con nueva información.
                             <hr>
-                            <button class="button is-info is-outlined" [routerLink]="['/novedades']">Outlined</button>
+                            <button class="button is-info is-outlined" [routerLink]="['/novedades']">Ingresar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-one-quarter">
+                <div class="card large">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="../../../assets/img/estadistica.jpg" alt="Image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4 no-padding">Datos estadisticos</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            Revisa los resultados de los formularios llenados por los usuarios de la app movil.
+                            <hr>
+                            <button class="button is-info is-outlined" [routerLink]="['/formularios']">Ingresar</button>
                         </div>
                     </div>
                 </div>
