--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item" href="../">
+            <a class="navbar-item" [routerLink]="['/home']">
                     <img src="../../../assets/img/logo-kimirina.png" alt="Logo">
                 </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
@@ -17,13 +17,7 @@
                             Cuenta
                         </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item">
-                                Perfil
-                            </a>
-                        <hr class="navbar-divider">
-                        <div class="navbar-item">
-                            Sailr
-                        </div>
+                        <a class="navbar-item">Salir</a>
                     </div>
                 </div>
             </div>
