--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
 
+<div class="container">
 <h1 class="title is-2">Lista de novedades</h1>
 <button class="button is-primary is-outlined" (click)="addNovedadForm()">Nuevo <span class="fas fa-plus" style="margin-left: 5px;"></span></button>
-
+<button class="button is-dark is-outlined" style="margin-left: 5px;" [routerLink]="['/home']"><i class="fas fa-arrow-left" style="margin-right: 2px;"></i> Regresar</button>
+<hr>
 
 <div class="content">
 
@@ -33,6 +35,8 @@
   </table>
 
   <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
+
+</div>
 
 </div>
 
