--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,25 +15,19 @@
                                 <hr class="login-hr">
                                 <p class="subtitle has-text-black">Por favor inicia tu sesión.</p>
                                 <div class="box">
-                                    <form>
+                                    <form #loginForm='ngForm' (ngSubmit)='loginUsuario(loginForm)' action="">
                                         <div class="field">
                                             <div class="control">
-                                                <input class="input is-large" type="email" placeholder="Correo electronico" autofocus="">
+                                                <input class="input is-large" type="email" placeholder="Correo electronico" autofocus="" name="correo"  #correo="ngModel" [(ngModel)]="usuarioService.selectedUsuario.correo">
                                             </div>
                                         </div>
                 
                                         <div class="field">
                                             <div class="control">
-                                                <input class="input is-large" type="password" placeholder="Contraseña">
+                                                <input class="input is-large" type="password" placeholder="Contraseña" name="password"  #password="ngModel" [(ngModel)]="usuarioService.selectedUsuario.password">
                                             </div>
                                         </div>
-                                        <div class="field">
-                                            <label class="checkbox">
-                                        <input type="checkbox">
-                                        Recuerdame
-                                        </label>
-                                        </div>
-                                        <button class="button is-block is-info is-large is-fullwidth" [routerLink]="['/home']">Ingresar <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                                        <button class="button is-block is-info is-large is-fullwidth" type="submit">Ingresar <i class="fa fa-sign-in" aria-hidden="true"></i></button>
                                     </form>
                                 </div>
                                 <p class="has-text-grey">
