--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                             Cuenta
                         </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item">Salir</a>
+                        <a class="navbar-item" (click)="logoutUsuario()">Salir</a>
                     </div>
                 </div>
             </div>
